unpackaged/main/default/objects/Lead/fields/Asesores__c.field-meta.xml
<CustomField>
    <fullName>Asesores__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asesores disponibles para asignar a un lead</description>
    <label>Asesor</label>
    <referenceTo>Asesores__c</referenceTo>
    <relationshipLabel>Prospectos</relationshipLabel>
    <relationshipName>Prospectos</relationshipName>
    <type>Lookup</type>
</CustomField>