unpackaged/main/default/objects/Lead/fields/Cartera__c.field-meta.xml
<CustomField>
    <fullName>Cartera__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para identificar si un lead es trabajado de cartera</description>
    <label>Cartera</label>
    <type>Checkbox</type>
</CustomField>