unpackaged/main/default/objects/Lead/fields/Colaborador_Javer__c.field-meta.xml
<CustomField>
    <fullName>Colaborador_Javer__c</fullName>
    <label>Colaborador Javer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>