unpackaged/main/default/objects/Lead/fields/DeleteMailDuplicate__c.field-meta.xml
<CustomField>
    <fullName>DeleteMailDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eliminar duplicado</label>
    <type>Checkbox</type>
</CustomField>