unpackaged/main/default/objects/Lead/fields/Dependientes_Economicos__c.field-meta.xml
<CustomField>
    <fullName>Dependientes_Economicos__c</fullName>
    <label>Dependientes Económicos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>