unpackaged/main/default/objects/Lead/fields/Dias_Vencimiento_LP__c.field-meta.xml
<CustomField>
    <fullName>Dias_Vencimiento_LP__c</fullName>
    <label>Días Vencimiento LP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>