unpackaged/main/default/objects/Lead/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <formula>IF( NOT( ISBLANK( JMC_FechaNacimiento__c ) ) ,
  IF( DATE( 2000 , MONTH( JMC_FechaNacimiento__c ) , DAY( JMC_FechaNacimiento__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( JMC_FechaNacimiento__c ),
     YEAR (Today()) - YEAR ( JMC_FechaNacimiento__c ) -1 ),
  null)</formula>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>