unpackaged/main/default/objects/Lead/fields/ErrorCodeResponseSOAP__c.field-meta.xml
<CustomField>
    <fullName>ErrorCodeResponseSOAP__c</fullName>
    <label>Código de Respuesta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>