unpackaged/main/default/objects/Lead/fields/Fecha_Afluencia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Afluencia__c</fullName>
    <label>Fecha Afluencia</label>
    <type>Date</type>
</CustomField>