unpackaged/main/default/objects/Lead/fields/Fecha_Atenci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Atenci_n__c</fullName>
    <description>Fecha en la que el lead es atendido por un lead profiler</description>
    <label>Fecha de Atención</label>
    <type>Date</type>
</CustomField>