unpackaged/main/default/objects/Lead/fields/Fecha_Colaborador_Javer__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Colaborador_Javer__c</fullName>
    <label>Fecha Colaborador Javer</label>
    <type>Date</type>
</CustomField>