unpackaged/main/default/objects/Lead/fields/Fecha_de_Creacion_Eloqua__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Creacion_Eloqua__c</fullName>
    <label>Fecha de Creación Eloqua</label>
    <type>Date</type>
</CustomField>