unpackaged/main/default/objects/Lead/fields/Fecha_Estatus__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Estatus__c</fullName>
    <label>Fecha Estatus</label>
    <type>DateTime</type>
</CustomField>