unpackaged/main/default/objects/Lead/fields/Fecha_Vencimiento_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento_Asesor__c</fullName>
    <label>Fecha de Vencimiento Asesor</label>
    <type>Date</type>
</CustomField>