unpackaged/main/default/objects/Lead/fields/Fecha_Vencimiento_LP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento_LP__c</fullName>
    <label>Fecha de Vencimiento LP</label>
    <type>Date</type>
</CustomField>