unpackaged/main/default/objects/Lead/fields/Fecha_Vencimiento_Prospectador__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento_Prospectador__c</fullName>
    <label>Fecha de Vencimiento Prospectador</label>
    <type>Date</type>
</CustomField>