unpackaged/main/default/objects/Lead/fields/ID_CUENTA__c.field-meta.xml
<CustomField>
    <fullName>ID_CUENTA__c</fullName>
    <description>Campo para mostrar el ID asignado en Siebel</description>
    <label>ID_CUENTA</label>
    <length>15</length>
    <type>Text</type>
</CustomField>