unpackaged/main/default/objects/Lead/fields/Invalid_Phone__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Phone__c</fullName>
    <formula>IF(NOT(ISBLANK(Phone)) &amp;&amp;  LEN(Phone) != 10,true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invalid Phone</label>
    <type>Checkbox</type>
</CustomField>