unpackaged/main/default/objects/Lead/fields/JCM_Carga_inicial__c.field-meta.xml
<CustomField>
    <fullName>JCM_Carga_inicial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para identificar leads de la carga inicial</description>
    <label>Carga inicial</label>
    <type>Checkbox</type>
</CustomField>