unpackaged/main/default/objects/Lead/fields/JMC_25__c.field-meta.xml
<CustomField>
    <fullName>JMC_25__c</fullName>
    <description>Campo para capturar un cálculo que realiza el lead profiler sobre el crédito</description>
    <label>25%</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>