unpackaged/main/default/objects/Lead/fields/JMC_Analisisinterno__c.field-meta.xml
<CustomField>
    <fullName>JMC_Analisisinterno__c</fullName>
    <description>Campo que detona las reglas en las etapas de prospección y el envío a MAS Comercial.</description>
    <label>Análisis interno</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asesor externo</fullName>
            </value>
            <value>
                <fullName>Aumento de crédito</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
            <value>
                <fullName>Buscando opciones</fullName>
            </value>
            <value>
                <fullName>Compra a largo plazo</fullName>
            </value>
            <value>
                <fullName>En atención</fullName>
                <label>En atención en fracc</label>
            </value>
            <value>
                <fullName>Error registro</fullName>
            </value>
            <value>
                <fullName>Existe</fullName>
            </value>
            <value>
                <fullName>Mailing WhatsApp</fullName>
                <label>Mailing whatsapp</label>
            </value>
            <value>
                <fullName>Mensaje error Infonavit</fullName>
            </value>
            <value>
                <fullName>No contesta</fullName>
            </value>
            <value>
                <fullName>No lo conocen</fullName>
            </value>
            <value>
                <fullName>No validado</fullName>
            </value>
            <value>
                <fullName>Numero invalido</fullName>
                <label>Número inválido</label>
            </value>
            <value>
                <fullName>Numero suspendido</fullName>
                <label>Número suspendido</label>
            </value>
            <value>
                <fullName>Perfilado</fullName>
            </value>
            <value>
                <fullName>Personas mayores</fullName>
            </value>
            <value>
                <fullName>Producto</fullName>
            </value>
            <value>
                <fullName>Puntos posteriores</fullName>
            </value>
            <value>
                <fullName>Referencias</fullName>
            </value>
            <value>
                <fullName>Registro renta</fullName>
            </value>
            <value>
                <fullName>Sin capacidad de compra</fullName>
            </value>
            <value>
                <fullName>Sin confirmar</fullName>
            </value>
            <value>
                <fullName>Sin oferta de vivienda</fullName>
            </value>
            <value>
                <fullName>Sin validar</fullName>
            </value>
            <value>
                <fullName>Tipo de crédito</fullName>
            </value>
            <value>
                <fullName>Ubicación</fullName>
            </value>
            <value>
                <fullName>No existe</fullName>
                <isActive>false</isActive>
                <label>No existe</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>