unpackaged/main/default/objects/Lead/fields/JMC_AntiguedadLaboral__c.field-meta.xml
<CustomField>
    <fullName>JMC_AntiguedadLaboral__c</fullName>
    <description>Catálogo para capturar la antigüedad laboral del cliente</description>
    <label>Antigüedad laboral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>*Menos de 6 meses</fullName>
            </value>
            <value>
                <fullName>*6 a 11 meses</fullName>
            </value>
            <value>
                <fullName>*12 a 17 meses</fullName>
            </value>
            <value>
                <fullName>*18 meses o mas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>