unpackaged/main/default/objects/Lead/fields/JMC_ApellidoMaterno__c.field-meta.xml
<CustomField>
    <fullName>JMC_ApellidoMaterno__c</fullName>
    <description>Campo para capturar el apellido materno</description>
    <label>Apellido Materno</label>
    <length>30</length>
    <type>Text</type>
</CustomField>