unpackaged/main/default/objects/Lead/fields/JMC_AsesorAsignado__c.field-meta.xml
<CustomField>
    <fullName>JMC_AsesorAsignado__c</fullName>
    <description>Campo para asignar el nombre del asesor que dará seguimiento al lead</description>
    <label>Asesor Asignado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>