unpackaged/main/default/objects/Lead/fields/JMC_Asunto__c.field-meta.xml
<CustomField>
    <fullName>JMC_Asunto__c</fullName>
    <description>Campo para identificar el motivo de la creación del lead</description>
    <label>Asunto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bolsa de trabajo</fullName>
            </value>
            <value>
                <fullName>Información</fullName>
            </value>
            <value>
                <fullName>Servicio al Cliente</fullName>
            </value>
            <value>
                <fullName>Entrega de Vivienda</fullName>
            </value>
            <value>
                <fullName>Garantía</fullName>
            </value>
            <value>
                <fullName>CampañaATC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>