unpackaged/main/default/objects/Lead/fields/JMC_CalificaSubsidio__c.field-meta.xml
<CustomField>
    <fullName>JMC_CalificaSubsidio__c</fullName>
    <description>Catálogo para seleccionar si califica o no para el subsidio del crédito</description>
    <label>Califica para subsidio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si califica</fullName>
            </value>
            <value>
                <fullName>No califica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>