unpackaged/main/default/objects/Lead/fields/JMC_CanalVenta__c.field-meta.xml
<CustomField>
    <fullName>JMC_CanalVenta__c</fullName>
    <description>Catálogo relacionado al canal de venta</description>
    <label>Canal de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Asesor</fullName>
            </value>
            <value>
                <fullName>Evento</fullName>
            </value>
            <value>
                <fullName>Llamada Call Center</fullName>
            </value>
            <value>
                <fullName>Macroventa</fullName>
            </value>
            <value>
                <fullName>Medio Publicitario</fullName>
            </value>
            <value>
                <fullName>Medios Digitales</fullName>
            </value>
            <value>
                <fullName>Programas Institucionales</fullName>
            </value>
            <value>
                <fullName>Promotor Externo</fullName>
            </value>
            <value>
                <fullName>Prospección</fullName>
            </value>
            <value>
                <fullName>Referidos</fullName>
            </value>
            <value>
                <fullName>Venta Empresarial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>