unpackaged/main/default/objects/Lead/fields/JMC_CapacidadCompra__c.field-meta.xml
<CustomField>
    <fullName>JMC_CapacidadCompra__c</fullName>
    <description>Monto disponible al realizar la precalificación de un cliente</description>
    <label>Capacidad de Compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>