unpackaged/main/default/objects/Lead/fields/JMC_CapacidadFOVISSSTE__c.field-meta.xml
<CustomField>
    <fullName>JMC_CapacidadFOVISSSTE__c</fullName>
    <description>Monto disponible al realizar la precalificación de un cliente tipo Fovissste</description>
    <label>Capacidad FOVISSSTE</label>
    <length>15</length>
    <type>Text</type>
</CustomField>