unpackaged/main/default/objects/Lead/fields/JMC_Comentarios__c.field-meta.xml
<CustomField>
    <fullName>JMC_Comentarios__c</fullName>
    <description>Monto disponible al realizar la precalificación de un cliente tipo Fovissste</description>
    <label>Comentarios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>