unpackaged/main/default/objects/Lead/fields/JMC_ComentariosLead__c.field-meta.xml
<CustomField>
    <fullName>JMC_ComentariosLead__c</fullName>
    <description>Campo para la captura de comentarios del lead profiler</description>
    <label>Comentarios Lead</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>