unpackaged/main/default/objects/Lead/fields/JMC_Deseascomprarunacasa__c.field-meta.xml
<CustomField>
    <fullName>JMC_Deseascomprarunacasa__c</fullName>
    <description>Campo para preguntar si desea comprar una casa</description>
    <label>¿Deseas comprar una casa?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>