unpackaged/main/default/objects/Lead/fields/JMC_Edad__c.field-meta.xml
<CustomField>
    <fullName>JMC_Edad__c</fullName>
    <label>Edad</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>