unpackaged/main/default/objects/Lead/fields/JMC_EstadoFovissste__c.field-meta.xml
<CustomField>
    <fullName>JMC_EstadoFovissste__c</fullName>
    <description>Catálogo de Estado para el tipo de crédito Fovissste</description>
    <label>Estado (plaza) FOVISSSTE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguascalientes</fullName>
            </value>
            <value>
                <fullName>Estado de México</fullName>
            </value>
            <value>
                <fullName>Jalisco</fullName>
            </value>
            <value>
                <fullName>Nuevo León</fullName>
            </value>
            <value>
                <fullName>Querétaro</fullName>
            </value>
            <value>
                <fullName>Quintana Roo</fullName>
            </value>
            <value>
                <fullName>Tamaulipas</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>