unpackaged/main/default/objects/Lead/fields/JMC_EstatusLead__c.field-meta.xml
<CustomField>
    <fullName>JMC_EstatusLead__c</fullName>
    <description>Campo relacionado al análisis interno</description>
    <label>Estatus Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No validado</fullName>
            </value>
            <value>
                <fullName>No Interesado</fullName>
            </value>
            <value>
                <fullName>Incubadora</fullName>
            </value>
            <value>
                <fullName>Ilocalizable</fullName>
            </value>
            <value>
                <fullName>Perfilado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>