unpackaged/main/default/objects/Lead/fields/JMC_FechaAsignacion__c.field-meta.xml
<CustomField>
    <fullName>JMC_FechaAsignacion__c</fullName>
    <label>Fecha Asignación</label>
    <type>Date</type>
</CustomField>