unpackaged/main/default/objects/Lead/fields/JMC_FechaCaptura__c.field-meta.xml
<CustomField>
    <fullName>JMC_FechaCaptura__c</fullName>
    <label>Fecha de Captura</label>
    <type>Date</type>
</CustomField>