unpackaged/main/default/objects/Lead/fields/JMC_FechaLibCredYY__c.field-meta.xml
<CustomField>
    <fullName>JMC_FechaLibCredYY__c</fullName>
    <description>Fecha estimada para la liberación del crédito Infonavit</description>
    <label>Fecha liberación crédito YY</label>
    <type>Date</type>
</CustomField>