unpackaged/main/default/objects/Lead/fields/JMC_FechaNacimiento__c.field-meta.xml
<CustomField>
    <fullName>JMC_FechaNacimiento__c</fullName>
    <description>Campo para la fecha de nacimiento</description>
    <label>Fecha de Nacimiento</label>
    <type>Date</type>
</CustomField>