unpackaged/main/default/objects/Lead/fields/JMC_FechaNacimientoFB__c.field-meta.xml
<CustomField>
    <fullName>JMC_FechaNacimientoFB__c</fullName>
    <description>Campo para mapear la fecha de nacimiento en Facebook Lead Capture</description>
    <label>FechaNacimientoFB</label>
    <length>15</length>
    <type>Text</type>
</CustomField>