unpackaged/main/default/objects/Lead/fields/JMC_FechaProspeccion__c.field-meta.xml
<CustomField>
    <fullName>JMC_FechaProspeccion__c</fullName>
    <label>Fecha de Prospección</label>
    <type>Date</type>
</CustomField>