unpackaged/main/default/objects/Lead/fields/JMC_FechaReRegistro__c.field-meta.xml
<CustomField>
    <fullName>JMC_FechaReRegistro__c</fullName>
    <label>Fecha Re-Registro</label>
    <type>DateTime</type>
</CustomField>