unpackaged/main/default/objects/Lead/fields/JMC_FechaVencimiento__c.field-meta.xml
<CustomField>
    <fullName>JMC_FechaVencimiento__c</fullName>
    <label>Fecha de Vencimiento</label>
    <type>Date</type>
</CustomField>