unpackaged/main/default/objects/Lead/fields/JMC_Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>JMC_Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para la asignación del fraccionamiento de interés en el que se creará el prospecto</description>
    <label>Fraccionamiento</label>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Prospectos (Fraccionamiento)</relationshipLabel>
    <relationshipName>Prospectos1</relationshipName>
    <type>Lookup</type>
</CustomField>