unpackaged/main/default/objects/Lead/fields/JMC_FraccionamientoInterno__c.field-meta.xml
<CustomField>
    <fullName>JMC_FraccionamientoInterno__c</fullName>
    <label>FraccionamientoInterno</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACACIAS</fullName>
            </value>
            <value>
                <fullName>ALBERI RESIDENCIAL</fullName>
            </value>
            <value>
                <fullName>ALBORETO RESIDENCIAL</fullName>
            </value>
            <value>
                <fullName>ALVENTO</fullName>
            </value>
            <value>
                <fullName>ARBOLADA</fullName>
            </value>
            <value>
                <fullName>ARCOS 7</fullName>
            </value>
            <value>
                <fullName>ARCOS DEL SOL</fullName>
            </value>
            <value>
                <fullName>ARCOS DEL SOL SECTOR ELITE</fullName>
            </value>
            <value>
                <fullName>ARRAYANES HABITAT II</fullName>
            </value>
            <value>
                <fullName>BARRIO ESTRELLA</fullName>
            </value>
            <value>
                <fullName>BELCANTO</fullName>
            </value>
            <value>
                <fullName>BELCANTO II</fullName>
            </value>
            <value>
                <fullName>BELLATERRA</fullName>
            </value>
            <value>
                <fullName>BELLA VISTA 2º SECTOR FOMERREY</fullName>
            </value>
            <value>
                <fullName>BELLA VISTA 3ER SECTOR</fullName>
            </value>
            <value>
                <fullName>BELLO AMANECER RESIDENCIAL</fullName>
            </value>
            <value>
                <fullName>BOSQUE BOREAL</fullName>
            </value>
            <value>
                <fullName>BOSQUE DE LOS NOGALES</fullName>
            </value>
            <value>
                <fullName>BOSQUE REAL</fullName>
            </value>
            <value>
                <fullName>BOSQUES DE CASTILLA</fullName>
            </value>
            <value>
                <fullName>BOSQUES DE LERMA</fullName>
            </value>
            <value>
                <fullName>BOSQUES DEL NEVADO</fullName>
            </value>
            <value>
                <fullName>BOSQUES DE SAN JUAN</fullName>
            </value>
            <value>
                <fullName>BOSQUES DE SAN JUAN 2</fullName>
            </value>
            <value>
                <fullName>BOSQUES DE SAN JUAN 3</fullName>
            </value>
            <value>
                <fullName>BOSQUES DE SAN JUAN IV</fullName>
            </value>
            <value>
                <fullName>BOSQUES DE SAN JUAN V</fullName>
            </value>
            <value>
                <fullName>BOSQUES LA HUASTECA</fullName>
            </value>
            <value>
                <fullName>BULGARIA 533 WELT</fullName>
            </value>
            <value>
                <fullName>CAMPANARIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>