unpackaged/main/default/objects/Lead/fields/JMC_FraccionamientoMC__c.field-meta.xml
<CustomField>
    <fullName>JMC_FraccionamientoMC__c</fullName>
    <description>Campo para uso en Marketing Cloud</description>
    <formula>JMC_Fraccionamiento__r.Name</formula>
    <label>Fraccionamiento MC</label>
    <type>Text</type>
</CustomField>