unpackaged/main/default/objects/Lead/fields/JMC_FraccRecom__c.field-meta.xml
<CustomField>
    <fullName>JMC_FraccRecom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento Recomendado</label>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Prospectos (Fraccionamiento Recomendado)</relationshipLabel>
    <relationshipName>ProspectosFraccRecom</relationshipName>
    <type>Lookup</type>
</CustomField>