unpackaged/main/default/objects/Lead/fields/JMC_Fuente__c.field-meta.xml
<CustomField>
    <fullName>JMC_Fuente__c</fullName>
    <description>Campo para identificar el canal por el que se creó el lead</description>
    <label>Fuente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afluencia_base_externa</fullName>
            </value>
            <value>
                <fullName>Aperturas</fullName>
            </value>
            <value>
                <fullName>Arrayanes</fullName>
            </value>
            <value>
                <fullName>Asesor_para_perfil_FB</fullName>
            </value>
            <value>
                <fullName>ATC Cliente carga manual</fullName>
            </value>
            <value>
                <fullName>Base_de_datos_externa</fullName>
            </value>
            <value>
                <fullName>Base_externa_marzo2017</fullName>
            </value>
            <value>
                <fullName>Blogger/Tania Rendón</fullName>
            </value>
            <value>
                <fullName>Buen Fin</fullName>
            </value>
            <value>
                <fullName>Cadreon</fullName>
            </value>
            <value>
                <fullName>Chatbot_MJ</fullName>
            </value>
            <value>
                <fullName>chatbot fb</fullName>
            </value>
            <value>
                <fullName>chatbot wa</fullName>
            </value>
            <value>
                <fullName>chatbot web</fullName>
            </value>
            <value>
                <fullName>Chat Sitio</fullName>
            </value>
            <value>
                <fullName>Click to Call</fullName>
            </value>
            <value>
                <fullName>Display_lead</fullName>
            </value>
            <value>
                <fullName>Expo_virtual_Javer</fullName>
            </value>
            <value>
                <fullName>Facebook_lead</fullName>
            </value>
            <value>
                <fullName>Facebook_lead_fovissste</fullName>
            </value>
            <value>
                <fullName>Facebook_lead_oc</fullName>
            </value>
            <value>
                <fullName>Facebook Inbox</fullName>
            </value>
            <value>
                <fullName>Facebook Inbox Pagado</fullName>
            </value>
            <value>
                <fullName>Formulario ATC</fullName>
            </value>
            <value>
                <fullName>Fovissste_base_externa</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Inmuebles24</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Instagram_lead</fullName>
            </value>
            <value>
                <fullName>Instagram Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>