unpackaged/main/default/objects/Lead/fields/JMC_Genero__c.field-meta.xml
<CustomField>
    <fullName>JMC_Genero__c</fullName>
    <description>Sexo del cliente</description>
    <label>Sexo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Masculino</fullName>
            </value>
            <value>
                <fullName>Femenino</fullName>
            </value>
            <value>
                <fullName>Indistinto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>