unpackaged/main/default/objects/Lead/fields/JMC_IdDelete__c.field-meta.xml
<CustomField>
    <fullName>JMC_IdDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>