unpackaged/main/default/objects/Lead/fields/JMC_LeadProfile__c.field-meta.xml
<CustomField>
    <fullName>JMC_LeadProfile__c</fullName>
    <description>Agente lead profiler que dará seguimiento</description>
    <label>Lead Profiler</label>
    <length>100</length>
    <type>Text</type>
</CustomField>