unpackaged/main/default/objects/Lead/fields/JMC_Lote__c.field-meta.xml
<CustomField>
    <fullName>JMC_Lote__c</fullName>
    <description>Número de lote de la ubicación reservada</description>
    <label>Lote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>