unpackaged/main/default/objects/Lead/fields/JMC_ManeraPrefContact__c.field-meta.xml
<CustomField>
    <fullName>JMC_ManeraPrefContact__c</fullName>
    <description>Identificar la manera preferida de contacto del cliente</description>
    <label>Manera preferida de contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Llamada</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Mensaje de texto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>