unpackaged/main/default/objects/Lead/fields/JMC_Manzana__c.field-meta.xml
<CustomField>
    <fullName>JMC_Manzana__c</fullName>
    <description>Manzana de la ubicación reservada</description>
    <label>Manzana</label>
    <length>255</length>
    <type>Text</type>
</CustomField>