unpackaged/main/default/objects/Lead/fields/JMC_MontoCreditoInfonavit__c.field-meta.xml
<CustomField>
    <fullName>JMC_MontoCreditoInfonavit__c</fullName>
    <description>Monto asignado por el Infonavit al realizar la precalificación</description>
    <label>Monto de crédito Infonavit</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>